--- a/resources/html/base.html
+++ b/resources/html/base.html
@@ -26,7 +26,7 @@
               <div id="nav-menu" class="navbar-menu">
                   <div class="navbar-start">
                       <a href="/" class="navbar-item{% ifequal page "home.html" %} is-active{%endifequal%}">Home</a>
-                      <a href="/test-data" class="navbar-item{% ifequal page "test-data.html" %} is-active{%endifequal%}">Test Data</a>
+                      <a href="/hacker-rank" class="navbar-item{% ifequal page "hacker-rank.html" %} is-active{%endifequal%}">Hacker Rank</a>
                       <a href="/about" class="navbar-item{% ifequal page "about.html" %} is-active{%endifequal%}">About</a>
                   </div>
               </div>
